[package]
name = "jonitor"
version = "1.0.0"
authors = ["Jeremy"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
chrono = "0.4"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "fat"